syntax = 'proto2';
package wik;
option go_package = "github.com/nick-leslie/proto/wik-bet-backend";
message ws_message {
  enum command {
    REGISTER = 0;
    BET = 1;
    QUIT = 2;
    CREATE_CLIP = 3;
    PAYOUT = 4;
    NOOP = 5;
  }
  required command cmd = 1;
  optional player player = 2;
  optional bet bet = 3;
}
message player {
  required string username = 1;
  required bool isAdmin = 2;
}
message bet {
  required int64 points =1;
  required bool vote = 2;
}

message clip {
  repeated string yesPlayers = 1;
  repeated string noPlayers = 2;
  required bool status = 3;
}